# desque

./: Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
examples/: crn_queues.rs  gg1_queue.rs  mm1_queue.rs  parallel_event.rs
src/: error.rs  events.rs  generic_parameters.rs  lib.rs  serial.rs  simulation.rs  threadsafe.rs
src/events/: event_holder.rs  event_traits.rs
src/serial/: events.rs  simulation.rs
src/serial/events/: event_holder.rs  event_traits.rs
src/threadsafe/: events.rs  simulation.rs
src/threadsafe/events/: event_holder.rs  event_traits.rs
tests/: ordered_floats.rs  queues.rs  threadsafe.rs  util.rs
