[package]
name = "desque"
version = "0.4.0"
edition = "2021"
rust-version = "1.63"
license = "MIT"
description = "Lightweight discrete-event simulation framework."
repository = "https://github.com/bill-pace/desque"
readme = "README.md"
authors = ["Bill Pace"]
keywords = ["discrete-event", "simulation", "des"]
categories = ["simulation"]
exclude = [
    ".github",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ordered-float = { version = "4", optional = true }

[dev-dependencies]
rand = "0.9"
rand_distr = "0.5"
rand_pcg = "0.9"
